cmake_minimum_required(VERSION 3.14)
project(beej_network_concepts)

add_executable(ch3_inet ch3_inet.c)
add_executable(ch5_getaddrinfo ch5_getaddrinfo.c)
add_executable(ch5_showip ch5_showip.c)
add_executable(ch6_server ch6_server.c)
add_executable(ch6_client ch6_client.c)
add_executable(ch6_listener ch6_listener.c)
add_executable(ch6_talker ch6_talker.c)